gcc/testsuite/rust/rustc/ui/attr-eq-token-tree.rs
#[my_attr = !] // { dg-error "" "" { target *-*-* } }
fn main() {}

